@@ -5,6 +5,10 @@ Changes
 3.7.3 (unreleased)
 ------------------
 
+- Correctly locate packages with a __path__ attribute but no
+  __file__ attribute (such as namespace packages installed with setup.py
+  install --single-version-externally-managed).
+
 - Allow "info" and "includepath" to be passed optionally to context.action.
 
 3.7.2 (2010-04-30)
